--- a/markdown-generator-doclet/build.gradle
+++ b/markdown-generator-doclet/build.gradle
@@ -6,7 +6,7 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'java'
     id 'java-library'
 }
 
