--- a/markdown-generator-doclet/build.gradle
+++ b/markdown-generator-doclet/build.gradle
@@ -23,6 +23,13 @@ dependencies {
 
     // This dependency is used by the application.
     implementation libs.guava
+
+    // Lombok for reducing boilerplate code.
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
