move lombok into the toml

--- a/markdown-generator-doclet/build.gradle
+++ b/markdown-generator-doclet/build.gradle
@@ -25,11 +25,10 @@ dependencies {
     implementation libs.guava
 
     // Lombok for reducing boilerplate code.
-    compileOnly 'org.projectlombok:lombok:1.18.34'
-    annotationProcessor 'org.projectlombok:lombok:1.18.34'
-
-    testCompileOnly 'org.projectlombok:lombok:1.18.34'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
+    testCompileOnly libs.lombok
+    testAnnotationProcessor libs.lombok
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
