--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,8 +3,10 @@
 
 [versions]
 guava = "33.0.0-jre"
+lombok = "1.18.34"
 junit-jupiter = "5.10.2"
 
 [libraries]
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
+lombok = { module = "org.projectlombok:lombok", version.ref = "lombok" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
